# agentman

./: README.md  findings.md  progress.md  task_plan.md
agentman-daemon/: .gitignore  Cargo.toml  config.toml.example  install.sh
agentman-daemon/locales/: en.yml  zh.yml
agentman-daemon/src/: config.rs  heartbeat.rs  lib.rs  main.rs  task_executor.rs  utils.rs
agentman-daemon/src/agent/: cli_adapter.rs  factory.rs  hermes_adapter.rs  mod.rs  openclaw_adapter.rs  tests.rs
agentman-daemon/src/client/: base.rs  core.rs  execution.rs  mod.rs  parser.rs  runtime.rs  task.rs  tests.rs
agentman-daemon/src/git/: mod.rs  tests.rs  workspace.rs
agentman-daemon/src/models/: dependency.rs  execution.rs  mod.rs  runtime.rs  task.rs  tests.rs
agentman-daemon/tests/: integration_tests.rs
docs/: API.md  DEPLOYMENT.md  E2E_TESTING.md
docs/superpowers/specs/: architecture-design.md  base-schema.md  implementation-plan.md  self-check-report.md  testing-plan.md
workflows/: rejection-retry.json  urge-reminder.json
